# shuati

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: database.rs  llama.rs  mod.rs  parser.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: database.rs  llama.rs  mod.rs  parser.rs
src-tauri/src/utils/: mod.rs
src/components/: MarkdownRenderer.tsx  PracticeMode.tsx  QuestionCard.tsx  Settings.tsx  import-dialog.tsx  markdown-renderer.tsx  problem-set-detail.tsx  problem-set-list.tsx  question-card.tsx
src/components/ui/: button.tsx  tabs.tsx
src/lib/: ai.ts  db.ts
src/types/: index.ts
