[package]
name = "shuati-tauri"
version = "0.1.0"
description = "本地化 AI 刷题神器 - Tauri 2.0 跨平台桌面应用"
authors = ["shuati"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["wry"] }
tauri-plugin-shell = "2"
tauri-plugin-sql = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Markdown parsing
pulldown-cmark = "0.10"

# SQLite database
rusqlite = { version = "0.32", features = ["bundled"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async stream for streaming responses
async-stream = "0.3"

# Futures utilities
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Regex for LaTeX extraction
regex = "1"
log = "0.4"
fern = "0.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
